--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -18,11 +18,11 @@
 
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">OpenAPI Map - Aggregated OpenAPI services in your cluster</a>
-    <a class="navbar-brand" href="#">Filters:</a>
+    <span class="navbar-text">Filters:</span>
     <input ng-model="filter.name" placeholder="Filter service name" aria-label="Filter service name">
     <input ng-model="filter.path" placeholder="Filter path" aria-label="Filter path">
     <input ng-model="filter.annotations" placeholder="Filter annotation" aria-label="Filter annotation">
-    <input ng-model="filter.operations" placeholder="Filter operation" aria-label="Filter operation">
+    <input ng-model="filter.methods" placeholder="Filter methods" aria-label="Filter methods">
 </nav>
 
 <div class="container-fluid" ng-controller="OpenAPIMapController">
@@ -35,36 +35,35 @@
             <h2 class="display-5">Namespace: {{namespace}}</h2>
             <table class="table">
                 <thead class="thead-dark">
-                <tr>
-                    <th scope="col" class="text-left">Service</th>
-                    <th scope="col" class="text-left">Links</th>
-                    <th scope="col" class="text-left">Path</th>
-                    <th scope="col" class="text-left">Operations</th>
-                    <th scope="col" class="text-left">Annotations</th>
-                </tr>
+                    <tr>
+                        <th scope="col" class="text-left">Service</th>
+                        <th scope="col" class="text-left">Links</th>
+                        <th scope="col" class="text-left">Path</th>
+                        <th scope="col" class="text-left">Methods</th>
+                        <th scope="col" class="text-left">Annotations</th>
+                    </tr>
                 </thead>
+
                 <tbody>
-                <tr ng-repeat="service in ingressedServices | filter: filter">
-                    <td class="lead text-left">
-                        <a ng-hide="service.openapiUrl == null" target="_blank" href="{{service.openapiUrl}}">{{service.name}}</a>
-                    </td>
-                    <td class="lead text-left">
-                        <a ng-hide="service.openapiUiUrl == null" target="_blank" href="{{service.openapiUiUrl}}">UI</a>
-                    </td>
-                    <td class="lead text-left">{{service.path}}</td>
-                    <td class="lead text-left text-nowrap">
-                        <button ng-repeat="operation in service.operations | filter: filter" type="button"
-                                class="btn {{renderOperation(operation)}} mr-1" aria-disabled="true" disabled>
-                            {{operation}}
-                        </button>
-                    </td>
-                    <td class="lead text-left">
-                        <div ng-hide="true"><a href="">Show annotations</a></div>
-                        <div ng-show="true" ng-repeat="annotation in service.annotations">{{annotation['name']}}:
-                            {{annotation['value']}}
-                        </div>
-                    </td>
-                </tr>
+                    <tr ng-repeat="service in services | filter: filter">
+                        <td class="lead text-left">
+                            <a ng-hide="service.openapiUrl == null" target="_blank" href="{{service.openapiUrl}}">{{service.name}}</a>
+                            <div ng-show="service.openapiUrl == null">{{service.name}}</div>
+                        </td>
+                        <td class="lead text-left">
+                            <a ng-hide="service.openapiUiUrl == null" target="_blank" href="{{service.openapiUiUrl}}">UI</a>
+                        </td>
+                        <td class="lead text-left">{{service.path}}</td>
+                        <td class="lead text-left text-nowrap">
+                            <div ng-repeat="method in service.methods">
+                                <button type="button" class="btn {{renderMethod(method)}} mr-1" aria-disabled="true" disabled>{{method}}</button>
+                            </div>
+                        </td>
+                        <td class="lead text-left">
+                            <div ng-hide="true"><a href="">Show annotations</a></div>
+                            <div ng-show="true" ng-repeat="annotation in service.annotations">{{annotation['name']}}: {{annotation['value']}}</div>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
