--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -9,7 +9,7 @@
         .btn-group {display: flex;}
     </style>
 
-    <script src="/webjars/angularjs/1.7.8/angular.min.js"></script>
+    <script src="/webjars/angularjs/1.7.9/angular.min.js"></script>
     <script src="/openapi-map.js"></script>
 </head>
 
@@ -24,7 +24,7 @@
     <input ng-model="annotationsFilter" placeholder="Filter annotation" aria-label="Filter annotation">
 </nav>
 
-<div class="container-fluid" ng-controller="OpenAPIMapController">
+<div class="container-fluid" ng-controller="OpenAPIMapController" ng-cloak>
 
     <div class="row" style="padding-top: 50px">
 
